--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@emotion/styled": "^11.13.0",
     "@faker-js/faker": "^8.1.0",
     "@iconify/react": "^4.1.1",
-    "@mui/icons-material": "^5.15.15",
+    "@mui/icons-material": "^5.16.8",
     "@mui/lab": "^5.0.0-alpha.147",
-    "@mui/material": "^5.16.7",
+    "@mui/material": "^5.16.8",
     "@mui/x-date-pickers": "^7.2.0",
     "@progress/kendo-react-pdf": "^7.4.0",
     "@react-pdf/renderer": "^3.4.2",
@@ -40,6 +40,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.5.0",
     "numeral": "^2.0.6",
+    "papaparse": "^5.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
