--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-router-dom": "^6.16.0",
     "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5",
-    "simplebar-react": "^3.2.4"
+    "simplebar-react": "^3.2.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
